# devol

./: .bashrc  .gitignore  Dockerfile  README.md  boo.txt  docker-compose.yml  frames_2026-01-06_14.39.51.gv  rohan_pkg_list.txt
docs/: FinalProject_525_630_CASSADY_CHANDRA.tex  final_project.bib  new-aiaa.bst
docs/equations-of-motion/: solve.py
src/a200_description/: CMakeLists.txt  package.xml
src/a200_description/config/: ros2_controllers.yaml
src/a200_description/launch/: ros_gz_bridge.launch.py  view_gz.launch.py  view_rviz.launch.py
src/a200_description/rviz/: a200.rviz
src/a200_description/urdf/: a200.gazebo.xacro  a200.materials.xacro  a200.sdf  a200.urdf  a200.urdf.xacro  a200_macro.urdf.xacro
src/devol_application/: CMakeLists.txt  package.xml
src/devol_application/src/: devol_drive_demo.cpp  devol_drive_robot.cpp  devol_drive_robot.h  devol_robot.cpp  devol_robot.h  pick_and_place.cpp  pick_and_place_demo.cpp
src/devol_bringup/: CMakeLists.txt  package.xml
src/devol_bringup/config/: devol_bridge.yaml
src/devol_bringup/launch/: devol_sim.launch.py  diff_drive.launch.py  dual_devol_drive_sim.launch.py  rrbot_setup.launch.py
src/devol_demo_py/: package.xml  setup.cfg  setup.py
src/devol_demo_py/devol_demo_py/: collision_checker.py  devol_demo.py  devol_drive_demo.py  devol_drive_robot.py  devol_robot.py  dual_devol_demo.py  world_state_publisher.py
src/devol_demo_py/launch/: gz_dual_devol.launch.py
src/devol_description/: CMakeLists.txt  package.xml
src/devol_description/config/: apollo_ros2_controllers.yaml  demo_ros2_controllers.yaml  devol.ros2_control.xacro  devol.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/devol_description/launch/: moveit_devol.launch.py  ros_gz_bridge.launch.py  view_devol.launch.py  view_gz.launch.py  view_rviz.launch.py
src/devol_description/models/devol/: model.config  model.sdf
src/devol_description/rviz/: devol.rviz  view_devol.rviz
src/devol_description/srdf/: devol.srdf.xacro
src/devol_description/urdf/: devol.gazebo.xacro  devol.ros2_control.xacro  devol.sdf  devol.urdf  devol.urdf.xacro  devol_macro.urdf.xacro
src/devol_drive_description/: CMakeLists.txt  package.xml
src/devol_drive_description/config/: initial_positions.yaml  ros2_controllers.yaml
src/devol_drive_description/launch/: gz_devol_drive.launch.py  ros_gz_bridge.launch.py  view_devol_drive.launch.py  view_gz.launch.py  view_rviz.launch.py
src/devol_drive_description/rviz/: devol_drive.rviz
src/devol_drive_description/urdf/: devol_drive.gazebo.xacro  devol_drive.ros2_control.xacro  devol_drive.urdf.xacro  devol_drive_macro.urdf.xacro
src/devol_gazebo/: CMakeLists.txt  README.md  package.xml
src/devol_gazebo/config/: bridge.yaml
src/devol_gazebo/include/devol_gazebo/: BasicSystem.hh  FullSystem.hh
src/devol_gazebo/scripts/: generate_maps.py
src/devol_gazebo/sdf/: goal_sphere.sdf
src/devol_gazebo/src/: BasicSystem.cc  FullSystem.cc
src/devol_gazebo/worlds/: diff_drive.sdf
src/devol_gazebo/worlds/Maze_hr/: maze_world.sdf  model.sdf  poses.csv
src/devol_gazebo/worlds/Maze_ng/: map.yaml  maze_world.sdf  poses.csv
src/devol_gazebo/worlds/Maze_ql_1/: maze_world.sdf  poses.csv
src/devol_gazebo/worlds/basic_maze/: map.yaml  maze_world.sdf  poses.csv
src/devol_gazebo/worlds/devol/: model.sdf
src/devol_gazebo/worlds/empty/: maze_world.sdf  model.sdf
src/devol_gazebo/worlds/factory/: README.md  maze_world.sdf  model.sdf  poses.csv
src/devol_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/devol_moveit_config/config/: devol.ros2_control.xacro  devol.srdf  devol.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/devol_moveit_config/launch/: demo.launch.py  moveit_devol.launch.py
src/devol_moveit_config/rviz/: moveit_devol.rviz
src/devol_sim/: package.xml  setup.cfg  setup.py
src/devol_sim/devol_sim/: diffdrive_pid.py  map_publisher.py
src/devol_sim/launch/: full_simulation.launch.py  spawn_entities.launch.py
src/devol_sim/rviz/: rviz_view.rviz
src/diff_drive_description/: CMakeLists.txt  package.xml
src/diff_drive_description/launch/: gz_diff_drive.launch.py  view_diff_drive.launch.py
src/diff_drive_description/rviz/: diff_drive.rviz
src/diff_drive_description/urdf/: diff_drive.gazebo.xacro  diff_drive.ros2_control.xacro  diff_drive.sdf  diff_drive.urdf  diff_drive.urdf.xacro  diff_drive_macro.urdf.xacro  materials.xacro
src/diff_drive_sim/: package.xml  setup.py
src/diff_drive_sim/diff_drive_sim/: a_star_planner.py  agent_motion_planner.py  diffdrive_pid.py  goal_points_publisher.py  utils.py
src/diff_drive_sim/launch/: full_simulation.launch.py  ros_gz_bridge.launch.py  spawn_entities.launch.py
src/diff_drive_sim/rviz/: rviz_view.rviz
src/dual_devol_description/: CMakeLists.txt  package.xml
src/dual_devol_description/config/: ros2_controllers.yaml
src/dual_devol_description/launch/: gz_dual_devol.launch.py  view_dual_devol.launch.py
src/dual_devol_description/rviz/: dual_devol.rviz
src/dual_devol_description/urdf/: dual_devol.gazebo.xacro  dual_devol.ros2_control.xacro  dual_devol.urdf  dual_devol.urdf.xacro  dual_devol_macro.urdf.xacro
src/dual_devol_moveit_config/: CMakeLists.txt  package.xml
src/dual_devol_moveit_config/config/: dual_devol.srdf  dual_devol.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
src/dual_devol_moveit_config/launch/: demo.launch.py
