<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>devol_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the devol project</description>
  <maintainer email="jcassad1@jh.edu">Jacob Cassady</maintainer>
  <license>Apache 2.0</license>
  <author>Jacob Cassady</author>

  <depend>devol_description</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

